# dataorientedai

./: .gitignore  .pre-commit-config.yaml  README.md  presentation.tldr  pyproject.toml  requirements-dev.txt  requirements.txt
data/processed/: .gitignore
src/dataorientedai/: __init__.py  main.py
src/dataorientedai/ai/: Predictable.py  Trainable.py  _predict_model.py  _predict_model_onnx.py  _train_litmodel.py  bak.run_prediction.py  bak.run_training.py  run_training.py
src/dataorientedai/ai/common/: load_image.py  to_tensor.py
src/dataorientedai/ai/data/: MnistNumpyToImageConvertable.py  MnistUbyteToNumpyConvertable.py  Unzippable.py
src/dataorientedai/ai/datasets/: MnistDatasetCNN.py
src/dataorientedai/core/: Adapter.py  BlockingCollection.py  ConcurrentDictionary.py  ContextDictionary.py  Dictionary.py  EmptyCmd.py  EvalPluginsCmd.py  ExceptionHandler.py  HardStopCmd.py  IoC.py  LeafScope.py  MacroCmd.py  Processor.py  Scope.py  SoftStopCmd.py  ThreadLocal.py  UObject.py  _Scope.py  watchddog.py
src/dataorientedai/core/commands/: BridgeCmd.py  DoubleRepeateCmd.py  EmptyCmd.py  HardStopCmd.py  LogPrintCmd.py  LogWriteCmd.py  RepeateCmd.py  SearchPluginsCmd.py  SoftStopCmd.py
src/dataorientedai/core/exceptions/: IoCException.py
src/dataorientedai/core/handlers/: DoubleRepeaterExcHandler.py  ExceptionHandler.py  LogPrinterExcHandler.py  LogWriterExcHandler.py  RepeaterExcHandler.py
src/dataorientedai/core/interfaces/: IAdapter.py  ICommand.py  IDictionary.py  IExceptionHandler.py  IIoC.py  IPlugin.py  IQueue.py  IScope.py  IStrategy.py  IThreadLocal.py  IUObject.py
src/notdataorientedai/: __init__.py  predict_model.py  train_litmodel.py  train_model.py
src/notdataorientedai/common/: plot_sample.py  save_image.py
src/notdataorientedai/data/: numpy_to_images.py  ubyte_to_numpy.py  unpack_archive.py
